--- a/src/app/shared/components/bread-crumb/bread-crumb.component.html
+++ b/src/app/shared/components/bread-crumb/bread-crumb.component.html
@@ -1,5 +1,4 @@
-<nav class="mb-5">
-  <ol class="breadcrumb">
+  <ol class="breadcrumb float-sm-right">
     <li class="breadcrumb-item">
       <a routerLink="/">Home</a>
     </li>
@@ -15,4 +14,3 @@
     </li>
 
   </ol>
-</nav>
